app/assets/stylesheets/components/_advice.css.sass
.advice
  position: absolute
  left: 50%
  margin-left: -200px
  text-align: center
  top: 40%
  width: 600px

  p
    margin-bottom: 4px

  .advice-title
    font-weight: bold
    font-weight: 600
    font-size: 25px
    line-height: 25px
    margin-top: 1em
    margin-bottom: 2em

  .advice-description
    font-size: 14px
    margin-bottom: 2em
    margin-top: 1em

  .top-advice
    margin-bottom: 10em

  .giant-icon
    font-size: 200px
    color: $medium-gray
    +text-shadow(0 -1px 0px rgba(0,0,0,0.7))

  .default-button
    margin-bottom: 15px

.advice.inner-advice
  position: static
  margin: auto
  padding-top: 80px

  .giant-icon
    font-size: 125px

.with-left-nav
  .advice
    left: 35%

